add remote IP filter setting

--- a/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
@@ -40,6 +40,13 @@
                     </div>
                 </div>
                 <br />
+                <div class="checkboxContainer checkboxContainer-withDescription fldRemoteAccess hide">
+                    <label>
+                        <input type="checkbox" is="emby-checkbox" id="chkRemoteAccess" />
+                        <span>${AllowRemoteAccess}</span>
+                    </label>
+                    <div class="fieldDescription checkboxFieldDescription">${AllowRemoteAccessHelp}</div>
+                </div>
                 <label class="checkboxContainer">
                     <input type="checkbox" is="emby-checkbox" id="chkIsAdmin" />
                     <span>${OptionAllowUserToManageServer}</span>
