fix mouse not hiding during video playback; add amf to hardware transcoding menu

--- a/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
@@ -8,6 +8,7 @@
                 <div class="selectContainer">
                     <select is="emby-select" id="selectVideoDecoder" label="${LabelHardwareAccelerationType}">
                         <option value="">${OptionNone}</option>
+                        <option value="amf">AMD AMF (experimental)</option>
                         <option value="qsv">Intel Quick Sync (experimental)</option>
                         <option value="mediacodec">MediaCodec Android (experimental)</option>
                         <option value="omx">OpenMAX OMX (experimental)</option>
