--- a/MediaBrowser.WebDashboard/dashboard-ui/videoosd.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/videoosd.html
@@ -74,7 +74,7 @@
 
                 <div class="osdTimeText"><span class="osdPositionText"></span><span class="osdDurationText"></span><span class="endsAtText"></span></div>
 
-                <div class="volumeButtons">
+                <div class="volumeButtons hide-mouse-idle-tv">
                     <button is="paper-icon-button-light" class="buttonMute autoSize" title="${Mute}">
                         <i class="xlargePaperIconButton md-icon">&#xE050;</i>
                     </button>
