--- a/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
@@ -1,4 +1,4 @@
-﻿<div id="editUserPage" data-role="page" class="page type-interior userProfilesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users" data-require="scripts/useredit,emby-linkbutton,emby-input,emby-checkbox,emby-button">
+﻿<div id="editUserPage" data-role="page" class="page type-interior userProfilesPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Users" data-require="scripts/useredit,emby-select,emby-linkbutton,emby-input,emby-checkbox,emby-button">
 
     <div>
         <div class="content-primary">
@@ -39,7 +39,10 @@
                         </div>
                     </div>
                 </div>
-                <br />
+                <div class="selectContainer fldSelectLoginProvider hide">
+                    <select class="selectLoginProvider" is="emby-select" label="${LabelAuthProvider}"></select>
+                    <div class="fieldDescription">${AuthProviderHelp}</div>
+                </div>
                 <div class="checkboxContainer checkboxContainer-withDescription fldRemoteAccess hide">
                     <label>
                         <input type="checkbox" is="emby-checkbox" id="chkRemoteAccess" />
