support wmc episode naming conventions

--- a/MediaBrowser.WebDashboard/dashboard-ui/list.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/list.html
@@ -31,11 +31,14 @@
                 <i class="md-icon">&#xE145;</i>
             </button>
 
-            <button is="emby-button" class="btnSort hide button-flat">
+            <button is="emby-button" class="btnSort hide raised raised-mini">
                 <span class="btnSortText"></span>
-                <i class="md-icon btnSortIcon">&#xE5C5;</i>
+                <i class="md-icon btnSortIcon">&#xE5D8;</i>
             </button>
-            <button is="paper-icon-button-light" class="btnFilter" data-ripple="false" style="overflow:visible;">
+            <button is="emby-button" class="btnFilter raised raised-mini listTextButton-autohide">
+                <span>${Filter}</span>
+            </button>
+            <button is="paper-icon-button-light" class="btnFilter listIconButton-autohide" data-ripple="false" style="overflow:visible;">
                 <i class="md-icon">&#xE152;</i>
             </button>
             <button is="paper-icon-button-light" class="btnViewSettings">
