--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
@@ -7,9 +7,8 @@
 
             <div class="flex align-items-center" style="margin:1.25em 0;">
                 <h2 style="margin:0;">${HeaderTunerDevices}</h2>
-                <button is="emby-button" type="button" class="raised btnAddDevice submit raised-mini" style="margin-left:1em;" title="${ButtonAdd}">
+                <button is="emby-button" type="button" class="fab btnAddDevice submit" style="margin-left:1em;" title="${ButtonAdd}">
                     <i class="md-icon">&#xE145;</i>
-                    <span>${ButtonAdd}</span>
                 </button>
             </div>
             <div is="emby-itemscontainer" class="devicesList vertical-wrap" data-hovermenu="false" data-multiselect="false">
@@ -20,9 +19,8 @@
                     <br />
                     <div class="flex align-items-center" style="margin:1.25em 0;">
                         <h2 style="margin:0;">${HeaderGuideProviders}</h2>
-                        <button is="emby-button" type="button" class="raised btnAddProvider submit raised-mini" style="margin-left:1em;" title="${ButtonAdd}">
+                        <button is="emby-button" type="button" class="fab btnAddProvider submit" style="margin-left:1em;" title="${ButtonAdd}">
                             <i class="md-icon">&#xE145;</i>
-                            <span>${ButtonAdd}</span>
                         </button>
                     </div>
 
