--- a/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userprofiles.html
@@ -7,9 +7,8 @@
                     <h2 class="sectionTitle">
                         <span>${HeaderUsers}</span>
                     </h2>
-                    <button is="emby-button" type="button" class="raised btnAddUser submit raised-mini sectionTitleButton" style="margin-left:1em;" title="${ButtonAddUser}">
+                    <button is="emby-button" type="button" class="fab btnAddUser submit sectionTitleButton" style="margin-left:1em;" title="${ButtonAddUser}">
                         <i class="md-icon">&#xE145;</i>
-                        <span>${ButtonAdd}</span>
                     </button>
                 </div>
                 <div class="localUsers itemsContainer vertical-wrap" style="margin-top: .5em;"></div>
@@ -20,9 +19,8 @@
                     <h2 class="sectionTitle">
                         ${HeaderGuests}
                     </h2>
-                    <button is="emby-button" type="button" class="raised btnInvite submit raised-mini" style="margin-left:1em;" title="${ButtonInviteUser}">
+                    <button is="emby-button" type="button" class="fab btnInvite submit" style="margin-left:1em;" title="${ButtonInviteUser}">
                         <i class="md-icon">&#xE145;</i>
-                        <span>${ButtonAdd}</span>
                     </button>
                 </div>
                 <div class="connectUsers itemsContainer vertical-wrap" style="margin-top:.5em;"></div>
