--- a/MediaBrowser.WebDashboard/dashboard-ui/list.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/list.html
@@ -5,7 +5,7 @@
 
     <div class="flex-grow padded-left padded-right pageContainerTopPadding">
 
-        <div class="flex align-items-center justify-content-center focuscontainer-x itemsViewSettingsContainer padded-top padded-bottom flex-wrap-wrap" style="padding-bottom:2em;">
+        <div class="flex align-items-center focuscontainer-x itemsViewSettingsContainer padded-top padded-bottom flex-wrap-wrap" style="padding-bottom:2em;">
             <button is="emby-button" class="btnPlay raised raised-mini hide listTextButton-autohide">
                 <span>${HeaderPlayAll}</span>
             </button>
@@ -33,7 +33,7 @@
 
             <button is="emby-button" class="btnSort hide raised raised-mini">
                 <span class="btnSortText"></span>
-                <i class="md-icon btnSortIcon">&#xE5D8;</i>
+                <i class="md-icon btnSortIcon viewSettingsButtonIcon">&#xE5D8;</i>
             </button>
             <button is="emby-button" class="btnFilter raised raised-mini listTextButton-autohide">
                 <span>${Filter}</span>
@@ -41,7 +41,10 @@
             <button is="paper-icon-button-light" class="btnFilter listIconButton-autohide" data-ripple="false" style="overflow:visible;">
                 <i class="md-icon">&#xE152;</i>
             </button>
-            <button is="paper-icon-button-light" class="btnViewSettings">
+            <button is="emby-button" class="btnViewSettings raised raised-mini listTextButton-autohide">
+                <i class="md-icon viewSettingsButtonIcon">&#xE5D3;</i>
+            </button>
+            <button is="paper-icon-button-light" class="btnViewSettings listIconButton-autohide">
                 <i class="md-icon">&#xE5D3;</i>
             </button>
         </div>
